--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,10 +31,13 @@ endorsed.classpath=
 excludes=
 file.reference.jxl.jar=D:\\Projects\\Paii_Project\\jexcelapi\\jxl.jar
 file.reference.jxl.jar-1=D:\\Program\\lib\\jxl.jar
+file.reference.jxl.jar-2=dist\\lib\\jxl.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Program Files (x86)\\MySQL\\Connector.J 5.1\\mysql-connector-java-5.1.39-bin.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar-1=D:\\Program\\lib\\mysql-connector-java-5.1.39-bin.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar-2=dist\\lib\\mysql-connector-java-5.1.39-bin.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.1\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 file.reference.swingx-all-1.6.4.jar-1=D:\\Program\\lib\\swingx-all-1.6.4.jar
+file.reference.swingx-all-1.6.4.jar-2=dist\\lib\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,7 +46,10 @@ javac.classpath=\
     ${file.reference.jxl.jar}:\
     ${file.reference.jxl.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}:\
-    ${file.reference.swingx-all-1.6.4.jar-1}
+    ${file.reference.swingx-all-1.6.4.jar-1}:\
+    ${file.reference.jxl.jar-2}:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar-2}:\
+    ${file.reference.swingx-all-1.6.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
