--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.mysql-connector-java-5.1.39-bin.jar=D:\\Program\\PhamacySystem\\d
 file.reference.swingx-all-1.6.4.jar=D:\\Program\\PhamacySystem\\dist\\lib\\swingx-all-1.6.4.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\SAHA35\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Napapol\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
