--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,8 +2,9 @@ compile.on.save=false
 do.depend=false
 do.jar=true
 file.reference.jxl.jar=D:\\Program\\PhamacySystem\\dist\\lib\\jxl.jar
-file.reference.mysql-connector-java-5.1.39-bin.jar=D:\\Program\\PhamacySystem\\dist\\lib\\mysql-connector-java-5.1.39-bin.jar
-file.reference.swingx-all-1.6.4.jar=D:\\Program\\PhamacySystem\\dist\\lib\\swingx-all-1.6.4.jar
+file.reference.jxl.jar-1=C:\\Users\\Napapol\\Documents\\NetBeansProjects\\PhamacySystem\\dist\\lib\\jxl.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Users\\Napapol\\Documents\\NetBeansProjects\\PhamacySystem\\dist\\lib\\mysql-connector-java-5.1.39-bin.jar
+file.reference.swingx-all-1.6.4.jar=C:\\Users\\Napapol\\Documents\\NetBeansProjects\\PhamacySystem\\dist\\lib\\swingx-all-1.6.4.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Napapol\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
