Fix mysql host and username, password/ Fix period of pagination

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
 compile.on.save=false
 do.depend=false
 do.jar=true
-file.reference.jxl.jar=D:\\Program\\PhamacySystem\\dist\\lib\\jxl.jar
+file.reference.jxl.jar=D:\\PhamacySystem\\dist\\lib\\jxl.jar
 file.reference.jxl.jar-1=C:\\Users\\Napapol\\Documents\\NetBeansProjects\\PhamacySystem\\dist\\lib\\jxl.jar
-file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Users\\Napapol\\Documents\\NetBeansProjects\\PhamacySystem\\dist\\lib\\mysql-connector-java-5.1.39-bin.jar
-file.reference.swingx-all-1.6.4.jar=C:\\Users\\Napapol\\Documents\\NetBeansProjects\\PhamacySystem\\dist\\lib\\swingx-all-1.6.4.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar=D:\\PhamacySystem\\dist\\lib\\mysql-connector-java-5.1.39-bin.jar
+file.reference.swingx-all-1.6.4.jar=D:\\PhamacySystem\\dist\\lib\\swingx-all-1.6.4.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Napapol\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\SAHA35\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
